DVK-1450 fix popover overflow for linked pilotroutes (#965)

--- a/admin/src/theme/dvk.css
+++ b/admin/src/theme/dvk.css
@@ -399,7 +399,8 @@ ion-popover.multiSelect::part(content) {
   overflow-y: auto;
 }
 
-ion-popover.multiSelect.fairwayIds::part(content) {
+ion-popover.multiSelect.fairwayIds::part(content),
+ion-popover.multiSelect.pilotRoutes::part(content) {
   bottom: 0;
 }
 
